[project]
name = "kvcache-bench-impact"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "iprogress>=0.4",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "python-dotenv>=1.2.2",
    "torch>=2.12.0",
    "transformers>=5.10.2",
]
